components/test-component-iazv/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: hacbs-demo-test-app-asov
    appstudio.openshift.io/component: test-component-iazv
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eltest-component-iazv
  namespace: hacbs-e2e-krbc
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-test-component-iazv
    weight: null
status: {}
